


table configuraciones{

    id int [pk, increment]  //primary key
nombre varchar
descripcion varchar
direccion varchar
telefono varchar
divisa varchar
correo varchar
web varchar
logo varchar
}


Table gestiones {

id int [pk, increment] //Primary key
nombre varchar
}



Table periodos {

    id int [pk, increment]
    nombre varchar 
    gestion_id int [ref: >gestiones.id]


}


Table niveles{

id int [pk, increment //primary key]
nombre varchar

}



Table turnos {

        id int [pk, increment]     //primary key
        nombre varchar

}

Table grados {

    id int [pk, increment]
    nombre varchar
    nivel_id int [ref: >niveles.id]

}
Table paralelos {

    id int [pk, increment]
    nombre varchar 
    nivel_id int [ref: >grados.id]

}

Table Users {


    id int [pk, increment]
        name varchar
        email varchar
        password varchar
}


Table personals {


    id int [pk, increment]
    usuario_id int [ref: > users.id]
    nombre varchar 
    nivel_id int [ref: >grados.id]
    apellidos varchar
   
    tipo varchar
    ci varchar

    fecha_nacimiento date

    direccion varchar
    telefono varchar



profesion varchar


}


